<resources>
    <string name="app_name">Tracky</string>
    <string name="title_asset_request">Asset Request</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_maps">MapsActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="close">Close</string>

    <!--    Bottom Nav Bar      -->
    <string name="title_live_tracking">Live Tracking</string>
    <string name="title_assetreq">Asset Request</string>
    <string name="title_home">Home</string>
    <string name="title_asset_list">Asset List</string>


    <!--    Asset List  -->
    <string name="depreciation_amount">Rpx.xxx</string>
    <string name="depreciation_minus">-</string>
    <string name="depreciation_slash">/</string>
    <string name="asset_title">Asset Title</string>
    <string name="asset_description">Asset Description</string>
    <string name="asset_final_price">Rpxxx.xxx</string>
    <string name="asset_initial_price"><strike>Rpxxx.xxx</strike></string>
    <string name="asset_depreciation_time">-x xxx</string>
    <string name="asset_depreciation_period">xxx</string>
    <string name="purchased_on">Purchased on</string>
    <string name="purchase_date">DD–MM–YYYY</string>
    <string name="img_asset">Asset Image</string>
    <string name="box_icon">Box Icon</string>
    <string name="truck_icon">Truck con</string>
    <string name="truck_id">xx</string>
    <string name="ic_truck_id">Truck icon</string>
    <string name="add_asset">Add Asset</string>
    <string name="asset_scan_qr">QR</string>
    <string name="edit_asset">Edit Asset</string>
    <string name="delete_asset">Delete Asset</string>

    <!--    LoginModel   -->
    <string name="login">Login</string>
    <string name="login_title">Let\'s sign you in</string>
    <string name="login_desc">Log in to your account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account? </string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="logout">Logout</string>


    <!--   Home    -->
    <string name="hello">Hello, </string>
    <string name="user_title">User</string>
    <string name="asset_stat">Asset</string>
    <string name="asset_amount">0</string>
    <string name="delivery_stat">Delivery</string>
    <string name="delivery_amount">0</string>
    <string name="ongoing_activity">Ongoing Activity</string>

    <!--    ADMIN: Asset Request      -->
    <string name="accept_asset">Accept asset</string>
    <string name="reject_asset">Reject asset</string>

    <!--    Add Asset   -->
    <string name="add_asset_name">Asset name</string>
    <string name="add_asset_description">Description</string>
    <string name="add_asset_price">Price</string>
    <string name="add_asset_depreciation">Depreciation</string>
    <string name="add_asset_date">Purchase date</string>
    <string name="add_tracker_id">Tracker ID</string>
    <string name="add_date">Pick Date</string>
    <string name="date_idle">Purchase Date</string>

    <!--    Live Tracking Page      -->
    <string name="tracker_name">Tracker 1</string>
    <string name="tracker_vehicle_name">Suzuki Carry Xtra</string>
    <string name="tracker_change">change</string>
    <string name="tracker_date">01 Jan</string>
    <string name="tracker_time">10:45</string>
    <string name="tracker_location">Jl Sukolilo no 123</string>
    <string name="tracker_longitude">Long. 104,52</string>
    <string name="tracker_latitude">Lat. 0,936946</string>
    <string name="tracker_plate">L 3 SK</string>


    <!--  Depreciation Period  -->
    <string-array name="depreciation_period_array">
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
        <item>Yearly</item>
         
    </string-array>

    <!--    USER: Scan QR       -->
    <string name="title_scan_qr">Scan QR</string>

    <!--    Detail Asset    -->
    <string name="title_detail_asset">Detail Asset</string>

</resources>