<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="16dp"
    tools:context=".ui.detail.AdminDetailAssetFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_image_asset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:strokeWidth="0dp"
        android:layout_marginTop="30dp"
        app:cardCornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/iv_asset_image"
                android:layout_width="350dp"
                android:layout_height="350dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                tools:srcCompat="@tools:sample/avatars"
                android:contentDescription="@string/img_asset"/>
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/iv_asset_image"
                app:layout_constraintBottom_toBottomOf="@id/iv_asset_image"
                android:background="@drawable/depreciation_status_asset_list">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/depreciation_minus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/depreciation_minus"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:fontFamily="@font/plus_jakarta_sans_semi_bold"
                        android:background="@color/accent"
                        android:paddingTop="2dp"
                        android:paddingBottom="6dp"
                        android:paddingStart="10dp"
                        />
                    <TextView
                        android:id="@+id/depreciation_amount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/depreciation_amount"
                        android:textSize="20sp"
                        android:textColor="@color/white"
                        android:fontFamily="@font/plus_jakarta_sans_semi_bold"
                        android:background="@color/accent"
                        android:paddingTop="2dp"
                        android:paddingBottom="6dp"
                        />
                    <TextView
                        android:id="@+id/depreciation_slash"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/depreciation_slash"
                        android:textSize="20sp"
                        android:textColor="@color/white"
                        android:fontFamily="@font/plus_jakarta_sans_semi_bold"
                        android:background="@color/accent"
                        android:paddingTop="2dp"
                        android:paddingBottom="6dp"
                        />
                    <TextView
                        android:id="@+id/depreciation_period"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/asset_depreciation_period"
                        android:textSize="20sp"
                        android:textColor="@color/white"
                        android:fontFamily="@font/plus_jakarta_sans_semi_bold"
                        android:background="@color/accent"
                        android:paddingTop="2dp"
                        android:paddingBottom="6dp"
                        android:paddingEnd="6dp"
                        />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>


    <TextView
        android:id="@+id/tv_asset_final_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textColor="@color/black"
        android:text="@string/asset_final_price"
        android:fontFamily="@font/plus_jakarta_sans"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/card_image_asset"
        app:layout_constraintTop_toBottomOf="@+id/card_image_asset" />

    <TextView
        android:id="@+id/tv_asset_initial_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/plus_jakarta_sans"
        android:text="@string/asset_initial_price"
        android:textColor="@color/disable"
        android:textSize="12sp"
        android:layout_marginBottom="4dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_asset_final_price"
        app:layout_constraintStart_toStartOf="@id/card_image_asset" />

    <TextView
        android:id="@+id/tv_asset_depreciation_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/plus_jakarta_sans"
        android:textSize="12sp"
        android:textStyle="bold"
        android:text="@string/asset_depreciation_time"
        android:layout_marginStart="13dp"
        android:textColor="@color/accent"
        app:layout_constraintTop_toTopOf="@id/tv_asset_initial_price"
        app:layout_constraintStart_toEndOf="@+id/tv_asset_initial_price"
        app:layout_constraintBottom_toBottomOf="@+id/tv_asset_initial_price"
        />

    <TextView
        android:id="@+id/tv_asset_depreciation_period"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/plus_jakarta_sans"
        android:textSize="12sp"
        android:textStyle="bold"
        android:text="@string/asset_depreciation_period"
        android:layout_marginStart="3dp"
        android:textColor="@color/accent"
        app:layout_constraintStart_toEndOf="@+id/tv_asset_depreciation_time"
        app:layout_constraintBottom_toBottomOf="@+id/tv_asset_depreciation_time"
        />

    <TextView
        android:id="@+id/tv_asset_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/asset_title"
        android:textColor="@color/black"
        android:fontFamily="@font/plus_jakarta_sans"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/card_image_asset"
        app:layout_constraintTop_toBottomOf="@+id/tv_asset_initial_price" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_tracker_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="@id/card_image_asset"
        app:layout_constraintTop_toTopOf="@id/tv_asset_title"
        app:layout_constraintBottom_toBottomOf="@id/tv_asset_title">

        <ImageView
            android:id="@+id/ic_tracker_id"
            android:layout_width="20dp"
            android:layout_height="14dp"
            android:contentDescription="@string/ic_truck_id"
            android:src="@drawable/ic_truck_id"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/mcv_tracker_id"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mcv_tracker_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="6dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/ic_tracker_id"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeWidth="1dp">

            <TextView
                android:id="@+id/tv_tracker_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/plus_jakarta_sans"
                android:paddingHorizontal="4dp"
                android:paddingBottom="3dp"
                android:text="@string/truck_id"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold" />

        </com.google.android.material.card.MaterialCardView>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_asset_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/plus_jakarta_sans"
        android:text="@string/asset_description"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/card_image_asset"
        app:layout_constraintTop_toBottomOf="@+id/tv_asset_title" />

    <LinearLayout
        android:id="@+id/ll_purchase_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/tv_asset_description"
        app:layout_constraintStart_toStartOf="@id/card_image_asset"
        android:weightSum="2"
        >
        <TextView
            android:id="@+id/purchased_on"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:fontFamily="@font/plus_jakarta_sans"
            android:textColor="@color/disable"
            android:text="@string/purchased_on"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
        <TextView
            android:id="@+id/tv_asset_purchased_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/plus_jakarta_sans"
            android:text="@string/purchase_date"
            android:textColor="@color/disable"
            android:textSize="12sp"
            android:layout_marginStart="4dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/purchased_on" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_open_qr_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:insetTop="2dp"
        android:insetBottom="2dp"
        android:layout_marginTop="8dp"
        android:maxLines="1"
        android:textAllCaps="false"
        app:iconSize="20dp"
        android:text="@string/asset_scan_qr"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:iconTint="@color/black"
        android:fontFamily="@font/plus_jakarta_sans"
        android:textStyle="bold"
        app:cornerRadius="16dp"
        android:backgroundTint="@color/white"
        app:strokeWidth="2dp"
        app:icon="@drawable/ic_qrcode_outline"
        app:layout_constraintTop_toTopOf="@id/tv_asset_final_price"
        app:layout_constraintBottom_toBottomOf="@id/tv_asset_final_price"
        app:layout_constraintEnd_toEndOf="@id/card_image_asset"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_delete_asset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:paddingBottom="6dp"
        android:height="50dp"
        android:width="380dp"
        android:textSize="14sp"
        android:textAllCaps="true"
        android:textColor="@color/accent"
        android:backgroundTint="@color/white"
        app:strokeWidth="2dp"
        app:strokeColor="@color/accent"
        android:fontFamily="@font/plus_jakarta_sans_semi_bold"
        android:text="@string/delete_asset"
        android:textStyle="bold"
        android:gravity="center"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_edit_asset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="6dp"
        android:height="50dp"
        android:width="380dp"
        android:textSize="14sp"
        android:textAllCaps="true"
        android:backgroundTint="@color/accent"
        android:fontFamily="@font/plus_jakarta_sans_semi_bold"
        android:text="@string/edit_asset"
        android:textStyle="bold"
        android:gravity="center"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_delete_asset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>